--- a/project-api/package.json
+++ b/project-api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
 }
