--- a/project-api/package.json
+++ b/project-api/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/sofiazanrosso/SEII-project-1#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6"
   }
 }
