--- a/project-api/package.json
+++ b/project-api/package.json
@@ -4,7 +4,7 @@
   "description": "Description",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/sofiazanrosso/SEII-project-1#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
+    "mocha": "^8.2.1",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   }
 }
