--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "We want to develop an online service for a university digital bulletin board (study groups, extra courses, events, rents).\r We want to deliver both a web version of this service and a client application.",
   "main": "index.js",
   "dependencies": {
-    "jest": "^26.6.3"
+    "fs-extra": "^9.0.1",
+    "jest": "^26.6.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
