--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "We want to develop an online service for a university digital bulletin board (study groups, extra courses, events, rents).\r We want to deliver both a web version of this service and a client application.",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "jest": "^26.6.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd project-api/ && npm start"
   },
   "repository": {
     "type": "git",
