--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "jest": "^26.6.3",
+    "mongoose": "^5.10.15",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6"
   },
