--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "We want to develop an online service for a university digital bulletin board (study groups, extra courses, events, rents).\r We want to deliver both a web version of this service and a client application.",
   "main": "index.js",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
-    "jest": "^26.6.3",
-    "mongoose": "^5.10.15",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.6"
+    "mocha": "^8.2.1",
+    "mongoose": "^5.10.13",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   },
   "devDependencies": {},
   "scripts": {
