--- a/project-api/package.json
+++ b/project-api/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "chai": "^4.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "mocha": "^8.2.1",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
   }
