--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Description",
   "main": "app.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha project-api/test/**/*.test.js --exit",
     "start": "cd project-api && nodemon server.js"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sofiazanrosso/SEII-project-1#readme",
   "dependencies": {
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "mocha": "^8.2.1",
