--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Description",
   "main": "app.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha project-api/test/**/*.test.js --exit",
     "start": "cd project-api && nodemon server.js"
   },
   "repository": {
