--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha project-api/test/**/*.test.js --exit",
-    "start": "cd project-api && nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
