--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DB_CONNECTION_STRING=<db-connection-string>
-TOKEN_SECRET=<token-secret>
+ACCESS_TOKEN_SECRET=<token-secret>
+REFRESH_TOKEN_SECRET=<refresh-token-secret>
