--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm install
+    - run: cd ..
+    - run: npm install .
     - run: npm test
       env:
         DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
