--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Node.js
 
 on:
   push:
@@ -23,11 +23,9 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
+        node-version: 12.x
+    - run: npm install
     - run: npm run build --if-present
-    - run: cd ..
-    - run: npm install .
     - run: npm test
       env:
         DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
