--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
+    "should": "^13.2.3",
     "supertest": "^6.0.1"
   }
 }
